--- a/nvim/.config/nvim/snippets/package.json
+++ b/nvim/.config/nvim/snippets/package.json
@@ -14,6 +14,12 @@
           "typescriptreact"
         ],
         "path": "./typescript/all.json"
+      },
+      {
+        "language": [
+          "all"
+        ],
+        "path": "./*/all.json"
       }
     ]
   }
