--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -192,9 +192,9 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+#         status_command i3status
+# }
 
 
 bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
@@ -216,9 +216,13 @@ bindsym $mod+v exec rofi -modi "clipboard:greenclip print" -show clipboard -run-
 for_window [class="steam"] floating enable
 for_window [class="slack"] floating enable
 
-exec --no-startup-id setxkbmap -option caps:escape
+client.focused          #333333 #5f676a #ffffff #484e50   #5f676a
+
 exec --no-startup-id ~/desk-mode.sh
+exec --no-startup-id setxkbmap -option caps:escape
 exec --no-startup-id sh -c "sleep 1 && feh --bg-scale ~/pictures/black.jpg"
 exec --no-startup-id rfkill unblock all
 exec --no-startup-id picom
 exec --no-startup-id greenclip daemon
+exec --no-startup-id  /usr/libexec/gsd-xsettings
+exec_always --no-startup-id sh ~/.config/polybar/launch.sh
