feat: picom & nvim improvements

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -3,10 +3,10 @@
 # (These are also the default values)
 
 transition-length = 300
-transition-pow-x = 0.3
-transition-pow-y = 0.3
-transition-pow-w = 0.3
-transition-pow-h = 0.3
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
 size-transition = true
 
 #################################
@@ -49,9 +49,9 @@ shadow-offset-y = -7;
 
 # Specify a list of conditions of windows that should have no shadow.
 # shadow-exclude = []
-shadow-exclude = [
-  "class_g = 'flameshot'"
-];
+# shadow-exclude = [
+#   "class_g = 'flameshot'"
+# ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
@@ -83,7 +83,7 @@ fade-out-step = 0.05;
 # fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
-fade-exclude = ["class_g = 'flameshot'"]
+# fade-exclude = ["class_g = 'flameshot'"]
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
@@ -99,7 +99,7 @@ fade-exclude = ["class_g = 'flameshot'"]
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1
+# inactive-opacity = 1
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -107,13 +107,13 @@ frame-opacity = 0.6;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false;
+# inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.0
+# inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -128,12 +128,12 @@ inactive-dim = 0.0
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 
-opacity-rule = [
-    "85:class_g = 'i3bar'",
-    "95:class_g = 'discord'",
-    "92:class_g = 'Rofi'",
-"100:class_g = 'flameshot'"
-]
+# opacity-rule = [
+#     "85:class_g = 'i3bar'",
+#     "95:class_g = 'discord'",
+#     "92:class_g = 'Rofi'",
+# "100:class_g = 'flameshot'"
+# ]
 
 
 #################################
@@ -147,10 +147,10 @@ corner-radius = 4.0
 round-borders = 1;
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [ 
-"class_g = 'Rofi'",
-"class_g = 'flameshot'"
-]
+# rounded-corners-exclude = [ 
+# "class_g = 'Rofi'",
+# "class_g = 'flameshot'"
+# ]
 
 
 #################################
@@ -201,9 +201,9 @@ blur: {
 # blur-kern = ""
 
 # Exclude conditions for background blur.
-blur-background-exclude = [
-"class_g = 'flameshot'"
-]
+# blur-background-exclude = [
+# "class_g = 'flameshot'"
+# ]
 
 #################################
 #       General Settings        #
@@ -234,11 +234,11 @@ vsync = true;
 # child that has 'WM_STATE') and mark them as active.
 #
 # mark-wmwin-focused = false
-mark-wmwin-focused = true;
+# mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
-mark-ovredir-focused = true;
+# mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
@@ -364,9 +364,9 @@ no-use-damage = false
 # clipping applied. Useful for screenshot tools, where you need to be able to
 # see through transparent parts of the window.
 #
-transparent-clipping-exclude = [
-"class_g = 'flameshot'"
-]
+# transparent-clipping-exclude = [
+# "class_g = 'flameshot'"
+# ]
 
 # Set the log level. Possible values are:
 #  "trace", "debug", "info", "warn", "error"
@@ -425,20 +425,63 @@ log-level = "warn";
 #     set, and doesn't want certain window to cause unnecessary screen redirection,
 #     you can set this to `true`.
 #
-wintypes:
-{
-  dock = { shadow = false; clip-shadow-above = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 1; }
-  dropdown_menu = { opacity = 1; }
-};
+# wintypes:
+# {
+#   dock = { shadow = false; clip-shadow-above = false; }
+#   dnd = { shadow = false; }
+#   popup_menu = { opacity = 1; }
+#   dropdown_menu = { opacity = 1; }
+# };
 
-#################################
-#     Animation Settings    #
-#################################
 
-animations = (
-  {
+
+
+
+rules: (
+    {   #any window
+        match = "*";
+        inactive-opacity = 0.9;
+        inactive-opacity-override = true;
+        inactive-dim = 0.0;
+        mark-wmwin-focused = true;
+        mark-ovredir-focused = true;
+        transparent-clipping-exclude = [
+            "class_g = 'flameshot'"
+        ];
+        shadow-exclude = [
+            "class_g = 'flameshot'"
+        ];
+        fade-exclude = [
+            "class_g = 'flameshot'"
+        ];
+        blur-background-exclude = [
+            "class_g = 'flameshot'"
+        ];
+        rounded-corners-exclude = [
+            "class_g = 'flameshot'"
+        ];
+        opacity-rule = [
+            "85:class_g = 'i3bar'",
+            "95:class_g = 'discord'",
+            "92:class_g = 'Rofi'",
+            "100:class_g = 'flameshot'"
+        ];
+        wintypes = {
+          dock = { shadow = false; clip-shadow-above = false; }
+          dnd = { shadow = false; }
+          popup_menu = { opacity = 1; }
+          dropdown_menu = { opacity = 1; }
+        };
+
+    },
+    # {   #floating windows
+    #     match = "floating";
+    #
+    # },
+    {
+   match = "class_g = 'kitty'";
+    animations = (
+    {
     triggers = ["close", "hide"];
     opacity = {
       curve = "linear";
@@ -505,4 +548,7 @@ animations = (
     shadow-offset-x = "offset-x";
     shadow-offset-y = "offset-y";
   }
+)
+
+    }
 )
