--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -171,10 +171,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym odiaeresis resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -213,6 +213,17 @@ bindsym $mod+Shift+Return exec firefox
 bindsym $mod+Shift+f floating toggle, resize set 1200 800
 bindsym $mod+v exec rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
 bindsym $mod + Shift + s exec --no-startup-id flameshot gui
+
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
+
+# bindsym $mod+BackSpace [class="Termite"] scratchpad show
+# bindsym $mod+equal [class="keepassxc"] scratchpad show
+# bindsym $mod+minus [class="Boostnote"] scratchpad show
 
 for_window [class="steam"] floating enable
 for_window [class="slack"] floating enable
