--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -493,7 +493,8 @@ rules: (
     shadow-opacity = "opacity";
   },
   {
-    triggers = ["open", "show"];
+    # triggers = ["open", "show"];
+    triggers = [""];
     opacity = {
       curve = "cubic-bezier(0,1,1,1)";
       duration = 0.3;
