feat: nvim updates and dotfile changes

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -109,6 +109,7 @@ linux_display_server x11
 
 
 font_family JetBrainsMono Nerd Font
+font_size 13
 # symbol_map U+E040-U+F5FF Lucide
 
 cursor_blink_interval 0
