--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,7 +14,7 @@ set $alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:JetBrainsMonoNerdFontMono-Regular 9
+font pango:Fira Code 13
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -230,6 +230,9 @@ bindsym $mod+minus scratchpad show
 
 for_window [class="steam"] floating enable
 for_window [class="slack"] floating enable
+for_window [class="Lutris"] floating enable
+
+bindsym $mod+Ctrl+n [title="nvim"] focus; move to workspace 1; workspace 1;
 
 
 default_border pixel 0
@@ -242,7 +245,7 @@ client.focused          #333333 #5f676a #ffffff #484e50   #5f676a
 
 exec --no-startup-id ~/desk-mode.sh
 exec --no-startup-id setxkbmap -option caps:escape
-exec --no-startup-id sh -c "sleep 1 && feh --bg-scale ~/.config/bg.jpg"
+exec --no-startup-id sh -c "sleep 1 && feh --bg-scale ~/pictures/black.jpg"
 exec --no-startup-id rfkill unblock all
 exec_always --no-startup-id picom -b --config ~/.config/picom/picom.conf
 exec --no-startup-id greenclip daemon
