--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -84,7 +84,7 @@ separator-foreground = ${colors.text}
 font-0 = JetBrainsMonoNerdFont Mono:size=10;2
 
 modules-left = xworkspaces xwindow 
-modules-right = systray pulseaudio filesystem battery memory cpu gpu eth wlan date 
+modules-right = systray spotify pulseaudio filesystem battery memory cpu gpu eth wlan date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -175,14 +175,14 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU"
+format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-; [module/gpu]
-; type = custom/script
-; exec = ~/.config/polybar/scripts/system-nvidia-smi.sh
-; interval = 10
+[module/gpu]
+type = custom/script
+exec = ~/.config/polybar/scripts/system-nvidia-smi.sh
+interval = 10
 
 [module/battery]
 type = internal/battery
@@ -219,12 +219,13 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid%
+label-connected = %{F#F0C674}wlan %{essid}%{F-}
+label-disconnected = %{F#F0C674}wlan %{F-}off
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#F0C674}eth%{F-} %local_ip%
 
 [module/date]
 type = internal/date
@@ -241,4 +242,8 @@ label-foreground = ${colors.text}
 screenchange-reload = true
 pseudo-transparency = true
 
-; vim:ft=dosini
+[module/spotify]
+type = custom/script
+exec = ~/.config/polybar/scripts/spotify.sh
+interval = 0.3
+label = %output%
