feat: white mode

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -449,13 +449,22 @@ rules: (
             "class_g = 'flameshot'"
         ];
         shadow-exclude = [
-            "class_g = 'flameshot'"
+            "class_g = 'flameshot'",
+            "window_type = 'menu'",
+            "window_type = 'dropdown_menu'",
+            "window_type = 'popup_menu'",
+            "window_type = 'tooltip'",
+            "window_type = 'utility'",
         ];
         fade-exclude = [
             "class_g = 'flameshot'"
         ];
         blur-background-exclude = [
-            "class_g = 'flameshot'"
+            "class_g = 'flameshot'",
+            "window_type = 'dropdown_menu'",
+            "window_type = 'popup_menu'",
+            "window_type = 'tooltip'",
+            "window_type = 'utility'",
         ];
         rounded-corners-exclude = [
             "class_g = 'flameshot'"
