--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -29,7 +29,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -235,7 +235,7 @@ for_window [class="Lutris"] floating enable
 bindsym $mod+Ctrl+n [title="nvim"] focus; move to workspace 1; workspace 1;
 
 
-default_border pixel 0
+default_border pixel 2
 gaps inner 10
 gaps outer 0 
  
@@ -252,3 +252,4 @@ exec --no-startup-id greenclip daemon
 exec --no-startup-id  /usr/libexec/gsd-xsettings
 exec_always --no-startup-id sh ~/.config/polybar/launch.sh
 exec --no-startup-id sh -c "redshift -x && redshift -O 4500"
+exec --no-startup-id setxkbmap -option caps:escape
