--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -92,7 +92,7 @@
 
 
 
-background_opacity 0.75
+background_opacity 1
 background_blur 1
 
 # advance 
@@ -104,7 +104,7 @@ enable_audio_bell no
 # # os specific tweaks (Gnome window decoration for wayland)
 # #linux_display_server wayland
 linux_display_server x11
-# hide_window_decorations yes
+hide_window_decorations no
 
 
 
@@ -114,3 +114,29 @@ font_size 13
 
 cursor_blink_interval 0
 cursor_stop_blinking_after 0
+
+
+background #C0C0C0
+foreground #000000
+selection_background #000080
+selection_foreground #FFFFFF
+
+cursor #000000
+cursor_text_color #C0C0C0
+
+color0 #000000
+color1 #800000
+color2 #008000
+color3 #808000
+color4 #000080
+color5 #800080
+color6 #008080
+color7 #C0C0C0
+color8 #808080
+color9 #FF0000
+color10 #00FF00
+color11 #FFFF00
+color12 #0000FF
+color13 #FF00FF
+color14 #00FFFF
+color15 #FFFFFF
