--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -87,7 +87,7 @@ separator-foreground = ${colors.text}
 font-0 = JetBrainsMonoNerdFont Mono:size=10;2
 
 modules-left = xworkspaces xwindow 
-modules-right = systray spotify pulseaudio filesystem battery memory cpu gpu eth wlan date 
+modules-right = systray spotify pulseaudio filesystem battery memory cpu eth wlan date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
