chore: picom backend

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -76,8 +76,8 @@ blur-strength = 5;
 #################################
 # Backend: "xrender", "glx", or "egl".
 # Default: "xrender"
-# backend = "glx";
-backend = "xrender";
+backend = "glx";
+# backend = "xrender";
 
 # Use higher-precision rendering and dithering. 
 # Reduces banding, might cost performance. Only for GLX/EGL.
