--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -54,14 +54,16 @@ bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
-
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 bindsym $mod+space exec "rofi -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+
+bindsym $mod+e exec --no-startup-id setxkbmap us -option caps:escape 
+bindsym $mod+d exec --no-startup-id setxkbmap de -variant nodeadkeys -option caps:escape 
 
 # change focus
 bindsym $mod+h focus left
@@ -102,7 +104,7 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+g floating toggle
@@ -145,16 +147,16 @@ bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+1 move container to workspace number $ws1; workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2; workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3; workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4; workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5; workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6; workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7; workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8; workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9; workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10; workspace number $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -253,10 +255,10 @@ gaps outer 0
 for_window [class=".*"] title_format "<span alpha='1'>%title</span>"
 
 focus_follows_mouse no
-client.focused          #333333 #5f676a #ffffff #484e50   #5f676a
+client.focused          #4c7899 #4c7899 #4c7899 #4c7899 #4c7899
 
 exec --no-startup-id ~/desk-mode.sh
-exec --no-startup-id setxkbmap -option caps:escape
+exec --no-startup-id setxkbmap -layout us -option caps:escape
 exec --no-startup-id sh -c "sleep 1 && wal -R" 
 exec --no-startup-id rfkill unblock all
 exec_always --no-startup-id picom -b --config ~/.config/picom/picom.conf
@@ -264,3 +266,4 @@ exec --no-startup-id greenclip daemon
 exec --no-startup-id  /usr/libexec/gsd-xsettings
 exec_always --no-startup-id sh ~/.config/polybar/launch.sh
 exec --no-startup-id sh -c "redshift -x && redshift -O 4500"
+exec --no-startup-id xrdb -merge ~/.Xresources
