--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -37,9 +37,9 @@ exec --no-startup-id dex --autostart --environment i3
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && amixer -q set Headphone 10%+ && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && amixer -q set Headphone 10%- && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && amixer -q set Headphone toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -58,12 +58,14 @@ bindsym $mod+Shift+q kill
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 bindsym $mod+space exec "rofi -show drun"
+bindsym $mod+BackSpace exec "rofi -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
-bindsym $mod+e exec --no-startup-id setxkbmap us -option caps:escape 
-bindsym $mod+d exec --no-startup-id setxkbmap de -variant nodeadkeys -option caps:escape 
+# bindsym $mod+e exec --no-startup-id setxkbmap us -option caps:escape 
+# bindsym $mod+d exec --no-startup-id setxkbmap de -variant nodeadkeys -option caps:escape 
+bindsym $mod+d exec --no-startup-id ~/.config/i3/language-switch.sh
 
 # change focus
 bindsym $mod+h focus left
@@ -102,7 +104,7 @@ bindsym $mod+Shift+v split toggle
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+s layout toggle split
 bindsym $mod+w layout tabbed
 # bindsym $mod+e layout toggle split
 
