--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,12 +1,11 @@
  [colors]
-base = #C0C0C0
-mantle = #A0A0A0
+base = #bb000000
+mantle = #181825
 crust = #11111b
-text = #000000
-text-highlight = #000080
-white = #ffffff
+text = #ffffff
+text-highlight = #F0C674
 subtext0 = #a6adc8
-subtext1 = #A0A0A0
+subtext1 = #bac2de
 surface0 = #313244
 surface1 = #45475a
 surface2 = #585b70
@@ -22,13 +21,12 @@ green = #a6e3a1
 yellow = #f9e2af
 peach = #fab387
 maroon = #eba0ac
-red = #800000
+red = #f38ba8
 mauve = #cba6f7
 pink = #f5c2e7
 flamingo = #f2cdcd
 rosewater = #f5e0dc
 transparent = #FF00000
-
 
 ;==========================================================
 ;
@@ -47,7 +45,6 @@ transparent = #FF00000
 ;   The README contains a lot of information
 ;
 ;==========================================================
-
 
 [colors]
 background = ${colors.base}
@@ -87,7 +84,7 @@ separator-foreground = ${colors.text}
 font-0 = JetBrainsMonoNerdFont Mono:size=10;2
 
 modules-left = xworkspaces xwindow 
-modules-right = systray spotify pulseaudio filesystem battery memory cpu eth wlan date 
+modules-right = systray spotify pulseaudio filesystem battery memory cpu gpu eth wlan date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -111,8 +108,8 @@ tray-size = 50%
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.primary}
-label-active-foreground = ${colors.white}
+label-active-background = ${colors.text}
+label-active-foreground = ${colors.crust}
 pin-workspaces = true
 label-active-underline= ${colors.lauve}
 label-active-padding = 1
