--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -98,8 +98,8 @@ background_opacity 0.95
 background_blur 1
 
 # advance 
-# term xterm-kitty
-term tmux-256color
+term xterm-kitty
+# term tmux-256color
 
 # terminal bell
 enable_audio_bell no
