--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -73,23 +73,11 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # # split in horizontal orientation
 # bindsym $mod+Shift+v split h
@@ -159,6 +147,10 @@ bindsym $mod+Shift+7 move container to workspace number $ws7; workspace number $
 bindsym $mod+Shift+8 move container to workspace number $ws8; workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9; workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10; workspace number $ws10
+
+# move workspace between monitors
+bindsym $mod+Control+l move workspace to output right
+bindsym $mod+Control+h move workspace to output left
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -250,14 +242,14 @@ for_window [class="Lutris"] floating enable
 bindsym $mod+Ctrl+n [title="nvim"] focus; move to workspace 1; workspace 1;
 
 
-default_border pixel 2
+default_border pixel 4
 gaps inner 10
 gaps outer 0 
  
 for_window [class=".*"] title_format "<span alpha='1'>%title</span>"
 
 focus_follows_mouse no
-client.focused          #4c7899 #4c7899 #4c7899 #4c7899 #4c7899
+client.focused          #a29f98 #a29f98 #a29f98 #a29f98 #a29f98
 
 exec --no-startup-id ~/desk-mode.sh
 exec --no-startup-id setxkbmap -option caps:escape
