--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -34,7 +34,9 @@ bind r source-file "~/.config/tmux/tmux.conf"
 #  ── pane & windows ─────────────────────────────────────────────────────────
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
-bind S list-sessions
+bind f choose-session
+bind e run "tmux neww ~/.config/tmux/project-picker.sh"
+bind E run "tmux neww ~/.config/tmux/session-picker.sh"
 bind q kill-pane
 bind Q kill-session
 #  ── resizing ────────────────────────────────────────────────────────────────
