--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -40,10 +40,12 @@ bind E run "tmux neww ~/.config/tmux/session-picker.sh"
 bind q kill-pane
 bind Q kill-session
 #  ── resizing ────────────────────────────────────────────────────────────────
-bind k resize-pane -U 5
-bind j resize-pane -D 5
-bind h resize-pane -L 5
-bind l resize-pane -R 5
+bind k resize-pane -U 15
+bind j resize-pane -D 15
+bind h resize-pane -L 15
+bind l resize-pane -R 15
+#  ── mouse ──────────────────────────────────────────────────────────────────
+bind m set -gF mouse "#{?mouse,off,on}"
 
 
 
