--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -8,7 +8,8 @@ set-option -gas terminal-overrides "*:Tc" # true color support
 set-option -gas terminal-overrides "*:RGB" # true color support
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-set -g prefix C-S
+unbind C-b
+set -g prefix C-s
 set -g base-index 1
 set -g renumber-windows on
 set -g mode-keys vi
