--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -25,6 +25,7 @@ set -g window-style "bg=default"
 set -sg escape-time 0
 set -g pane-border-style "fg=green"
 set -g pane-active-border-style "fg=green"
+set -g mouse on
 
 
 #  ╭──────────────────────────────────────────────────────────────────────────╮
