feat: github util

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -39,6 +39,7 @@ bind s split-window -v -c "#{pane_current_path}"
 bind f choose-session
 bind e run "tmux neww ~/.config/tmux/project-picker.sh"
 bind E run "tmux neww ~/.config/tmux/session-picker.sh"
+bind g run "~/.config/tmux/open_github.sh"
 bind q kill-pane
 bind Q kill-session
 #  ── resizing ────────────────────────────────────────────────────────────────
