--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -26,6 +26,7 @@ set -sg escape-time 0
 set -g pane-border-style "fg=green"
 set -g pane-active-border-style "fg=green"
 set -g mouse on
+set -g focus-events on
 
 
 #  ╭──────────────────────────────────────────────────────────────────────────╮
