--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -83,7 +83,7 @@ separator-foreground = ${colors.text}
 
 font-0 = JetBrainsMonoNerdFont Mono:size=10;2
 
-modules-left = xworkspaces xwindow 
+modules-left = xworkspaces xwindow active-window
 modules-right = systray spotify pulseaudio filesystem battery memory cpu gpu eth wlan date 
 
 cursor-click = pointer
@@ -127,7 +127,13 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:60:...% (%class%)
+
+[module/active-window]
+type = custom/script
+exec = ~/.config/polybar/current-window.sh
+interval = 1
+tail = false
 
 [module/filesystem]
 type = internal/fs
