--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -40,7 +40,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec kitty --single-instance
 
 # kill focused window
 bindsym $mod+q kill
