--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -27,6 +27,7 @@ set -g pane-border-style "fg=green"
 set -g pane-active-border-style "fg=green"
 set -g mouse on
 set -g focus-events on
+set -g detach-on-destroy off
 
 
 #  ╭──────────────────────────────────────────────────────────────────────────╮
