--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -266,7 +266,7 @@ mode "scratchpads" {
 exec_always --no-startup-id xrandr --output DP-4 --primary --output DP-0 --right-of DP-4
 exec_always --no-startup-id ~/.config/i3/autotiling
 exec_always --no-startup-id ~/.config/i3/firefox/firefox-title
-exec_always --no-startup-id picom -b --config ~/.config/picom/picom.conf
+# exec_always --no-startup-id picom -b --config ~/.config/picom/picom.conf
 exec_always --no-startup-id sh -c "redshift -x && redshift -O 4500"
 
 exec_always --no-startup-id xset s off
